Subiendo la primera pagina sobre territorios de Guinea

--- a/AboutEG/AboutEG/Web.config
+++ b/AboutEG/AboutEG/Web.config
@@ -11,8 +11,7 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-AboutEG-20190813082217.mdf;Initial Catalog=aspnet-AboutEG-20190813082217;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=AboutEGDB;User Id=AboutEG;Password=Pa$$w0rd2019&amp;" providerName="System.Data.SqlClient" /> 
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
